# AgentArmor

./: .gitignore  AgentArmor.toml  CHANGELOG.md  README.md  agentarmor-settings.json  benchmark.toml  pyproject.toml
action/: action.yml
agentarmor/: __init__.py
benchmarks/: README.md
detectors/: bundled_secret_leak.py
docker/: Dockerfile
docs/: MAC.md  REDTEAM_QUALITY.md  RELEASE_BODY.md  WEBSCAN_QUALITY.md  detection_baseline_v1.3.0.json
gui/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
models/: README.md
packaging/: README.md  build-installer.ps1  build-portable.ps1  bundle-models.ps1  generate-tauri-icon.py  setup-embed-python.ps1  test-embed-redteam.ps1  test-embed-webscan.ps1
plans/: agentarmor-plan-00-master.md  agentarmor-plan-01-core-api-sarif.md  agentarmor-plan-02-detection-foundation.md  agentarmor-plan-03-detection-ml.md  agentarmor-plan-04-scanners-provider-local.md  agentarmor-plan-05-scanners-modules.md  agentarmor-plan-06-benchmarking.md  agentarmor-plan-07-gui-distribution.md
probes/: .gitkeep  custom_probe.py
scripts/: build_meta_calibration.py  generate_detection_fixtures.py  run_full_exe_qa.py  run_lab_chatbot_test.py  run_qa_api.py  run_qa_validation.py  validate_redteam_agents.py  verify_webscan_urls.py  vulnerable_chatbot_server.py
tests/: conftest.py  test_agent_module.py  test_assertions.py  test_benchmark_api.py  test_benchmark_reporter.py  test_benchmark_runner.py  test_benchmark_scorer.py  test_benchmark_suite.py  test_config.py  test_detection_api.py  test_engine_router.py  (+62 more)
(+395 files in other folders)
