[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentarmor"
version = "1.2.2"
description = "AI Security Validation Platform — scan LLM APIs, agents, and models"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "AgentArmor" }]
dependencies = [
    "typer>=0.12.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.14.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "sse-starlette>=2.0.0",
    "numpy>=1.24.0,<2.0",
    "onnxruntime>=1.16.0",
    "xgboost>=2.0.0; platform_system != 'Windows' or python_version >= '3.10'",
    "litellm>=1.0.0",
    "jinja2>=3.1.0",
    "reportlab>=4.0.0",
    "pyyaml>=6.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
ml = [
    "faiss-cpu>=1.7.4",
]
browser = [
    "playwright>=1.40.0",
]
local = [
    "llama-cpp-python>=0.2.0",
    "transformers>=4.40.0",
    "torch>=2.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "faiss-cpu>=1.7.4",
    "httpx>=0.27.0",
]

[project.scripts]
agentarmor = "agentarmor.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["agentarmor"]

[tool.hatch.build.targets.wheel.force-include]
"benchmarks/suites" = "benchmarks/suites"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
